--- a/angular-forms-model/src/index.html
+++ b/angular-forms-model/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>AngularFormsStart</title>
+  <title>Model Driven</title>
   <base href="/">
 
   {{#unless environment.production}}
